--- a/style.css
+++ b/style.css
@@ -1,4 +1,47 @@
-/* Estilo básico da navbar */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
 .navbar {
     background-color: #333;
     width:100%;
@@ -10,6 +53,7 @@
     list-style: none;
     display: flex;
     justify-content: center;
+  
   }
   
   .navbar li {
@@ -44,7 +88,7 @@
     align-items: center;
     background:rgba(0,0,0,0.5);
 }
-.modalHandler{
+.modalContent{
     width: 90%;
     height:512px;
     border-radius:4px;
@@ -55,6 +99,10 @@
     overflow: hidden;
     
     
+}
+
+.comments{
+  list-style-type: none;
 }
 
 .postImg{
@@ -90,11 +138,13 @@ main{
     gap:12px;
     position:relative;
 }
+strong{
+  font-weight: bold;
+}
 
 .comments{
     width:100%;
-    height:100%;
-    background: red;
+    height:100%;  
     overflow-x: hidden;
     overflow-y: auto;
 
@@ -109,6 +159,23 @@ main{
     height:200px;
    
 }
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+
+
+
+
 
 
 
