--- a/style.css
+++ b/style.css
@@ -1,163 +1,236 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-    line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-    list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-    quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 .navbar {
-    background-color: #333;
-    width:100%;
-  }
-  
-  .navbar ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-  
-  }
-  
-  .navbar li {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  
-  .navbar li:last-child {
-    margin-right: 0;
-  }
-  
-  .navbar a {
-    display: block;
-    color: #fff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .navbar a:hover {
-    background-color: #ddd;
-    color: #333;
-  }
-.modalHolder{
-    width: 100%;
-    height: 100%;
-    position:absolute;
-    top: 0;
-    left: 0;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background:rgba(0,0,0,0.5);
-}
-.modalContent{
-    width: 90%;
-    height:512px;
-    border-radius:4px;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    overflow: hidden;
-    
-    
+  background-color: #333;
+  width: 100%;
 }
 
-.comments{
-  list-style-type: none;
+.navbar ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
-.postImg{
-    width: 100%;
+.navbar li {
+  display: inline-block;
+  margin-right: 20px;
 }
 
-.left{
-    width:100%;
-    height:100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
+.navbar li:last-child {
+  margin-right: 0;
 }
 
-.right{
-    display:flex;
-    flex-direction: column;
-    justify-content: start;
-    width: 500px;
-    padding:8px;
-    height:100%;
-    
+.navbar a {
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-main{
-    width:100%;
-    min-height:100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    gap:12px;
-    position:relative;
+.navbar a:hover {
+  background-color: #ddd;
+  color: #333;
 }
-strong{
+.modalHolder {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+.modalContent {
+  width: 90%;
+  height: 512px;
+  border-radius: 4px;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 0;
+  overflow: hidden;
+}
+
+
+.postImg {
+  width: 100%;
+}
+
+.left {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  width: 500px;
+  padding: 8px;
+  height: 100%;
+}
+
+main {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 12px;
+  position: relative;
+}
+strong {
   font-weight: bold;
 }
 
-.comments{
-    width:100%;
-    height:100%;  
-    overflow-x: hidden;
-    overflow-y: auto;
-
+.comments {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
-.commentCard{
-
+.commentCard {
+  margin-bottom:20px;
 }
 
-.postDescription{
-    width:100%;
-    height:200px;
-   
+.postDescription {
+  width: 100%;
+  height: 200px;
 }
 
 footer {
@@ -171,11 +244,3 @@ footer {
   max-width: 960px;
   margin: 0 auto;
 }
-
-
-
-
-
-
-
-
