--- a/style.css
+++ b/style.css
@@ -187,9 +187,9 @@ table {
   position: absolute;
   top: 0;
   left: 0;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+   display: none;
+  /* justify-content: center;
+  align-items: center;  */
   background: rgba(0, 0, 0, 0.5);
   
   
